Fix newsletter text alignment - left-align text while keeping section on right

--- a/css/styles.css
+++ b/css/styles.css
@@ -1433,8 +1433,8 @@ img {
 .footer__newsletter {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  text-align: right;
+  align-items: flex-start;
+  text-align: left;
   max-width: 480px;
   width: 100%;
   margin-left: auto;
@@ -1456,7 +1456,6 @@ img {
   margin-bottom: 16px;
   width: 100%;
   max-width: 100%;
-  justify-content: flex-end;
 }
 
 .footer__input {
